# foobartory

./: CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
foobartory/: __main__.py  banner.txt  cli.py  config.py  decorators.py  models.py  robot.py
tests/: conftest.py  test_cli.py  test_decorators.py  test_models.py
tests/unit/: conftest.py  test_decorators.py  test_models.py
